# mesh-subdivision

./: .gitignore  CMakeLists.txt  argparse.cpp  argparse.h  build.bat  main.cpp  main.h  readme.md  subdivision.cpp  subdivision.h  trimesh.h  trimesh_types.h  utils.cpp  utils.h
